# rhymonic

./: Cargo.toml  README.md  test.db
migrations/2025-12-23-010700-0000_create_songs/: down.sql  up.sql
migrations/2025-12-23-010704-0000_create_artists/: down.sql  up.sql
migrations/2025-12-23-010756-0000_add_song_genre/: down.sql  up.sql
migrations/2025-12-23-010922-0000_create_albums/: down.sql  up.sql
migrations/2025-12-23-011549-0000_add_song_artist/: down.sql  up.sql
migrations/2025-12-23-012250-0000_add_album_artist/: down.sql  up.sql
migrations/2025-12-24-223036-0000_genres/: down.sql  up.sql
migrations/2026-03-04-205356-0000_playlist/: down.sql  up.sql
migrations/2026-03-05-053624-0000_playlist_song/: down.sql  up.sql
src/: listener.rs  main.rs  model.rs  scan.rs  schema.rs  ui.rs
src/model/: album.rs  orm.rs  song.rs
src/model/orm/: objects.rs  relations.rs
src/ui/: components.rs  ellipsize.rs  helpers.rs  interface.rs  update.rs
src/ui/components/: album_display.rs  album_heading.rs  control_bar.rs  sidebar.rs  song_display.rs
