[package]
name = "rhymonic"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["sipper", "debug", "advanced", "image", "svg", "smol"] }
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
rodio = { version = "0.22", features = ["playback"] }
sipper = "0.1"
directories = "6"
lofty = "0.22"
walkdir = "2"
souvlaki = "0.8.3"
iced_aw = "0.13.0"
diesel_migrations = "2.3.1"
blake3 = "1.8.3"
rayon = "1.11.0"

[profile.release]
debug = true
