[package]
name = "rhymonic"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["sipper", "debug", "advanced", "image", "svg", "tokio"] }
image = { version = "0.25", default-features = false }
iced_aw = "0.13"

rfd = "0.17"
sipper = "0.1"
tokio = "1.52"

diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.3"

rodio = { version = "0.22", features = ["playback"] }
lofty = "0.22"
souvlaki = "0.8"

directories = "6"
walkdir = "2"

blake3 = "1.8"
rayon = "1.11"
